# my-own-personal-blog

./: Cargo.toml  README.md
src/: main.rs  podcast.rs  scratch.rs
test-blog/: config.toml
test-blog/content/posts/: 1.md  2.md  blog.md  esports.md  turing_complete.md  web_should_die.md
test-blog/templates/: base.html.hbs  footer.hbs  footer.html.hbs  header.hbs  index.hbs  index.html  index.html.hbs  nav.hbs  post.hbs  post.html.hbs  robots.txt.hbs  rss.xml.hbs
