[package]
name = "my-own-personal-blog"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.2.0"
walkdir = "2.2.7"
handlebars = "1.1.0"
serde = { version = "1.0.89", features = ["derive"]}
serde_any = { version = "0.5", default-features = false, features = ["toml"] }
failure = "0.1.5"
chrono = { version = "0.4.6", features =  ["serde"] }
clap = "2.32.0"
url = "1.7.2"
